# llm-eval-harness

./: .gitignore  README.md  pyproject.toml
evalkit/: __init__.py  __main__.py  clients.py  compare.py  config.py  core.py  report.py  scorers.py
examples/: quickstart.py
experiments/: sentiment.yaml  sql.yaml
experiments/data/: sentiment.jsonl  sql.jsonl
tests/: test_core.py  test_scorers.py
